hphp/test/zend/bad/bug49866.php
<?php
$a = "string";
$b = &$a[1];
$b = "f";
echo $a;